--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,11 +15,34 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:text="@string/hello_custom_views"/>
-
     <com.raywenderlich.emotionalface.EmotionalFaceView
         android:id="@+id/emotionalFaceView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:layout_below="@+id/textView" />
+    <com.raywenderlich.emotionalface.EmotionalFaceView
+        android:id="@+id/happyButton"
+        android:layout_width="@dimen/face_button_dimen"
+        android:layout_height="@dimen/face_button_dimen"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        app:borderColor="@color/white"
+        app:eyesColor="@color/white"
+        app:faceColor="@color/red"
+        app:mouthColor="@color/white"
+        app:state="happy" />
+
+    <com.raywenderlich.emotionalface.EmotionalFaceView
+        android:id="@+id/sadButton"
+        android:layout_width="@dimen/face_button_dimen"
+        android:layout_height="@dimen/face_button_dimen"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        app:borderColor="@color/black"
+        app:eyesColor="@color/black"
+        app:faceColor="@color/light_grey"
+        app:mouthColor="@color/black"
+        app:state="sad" />
+
 </RelativeLayout>
